2008-08-16  Patrick Ohly  <patrick.ohly@gmx.de>

	** Fix for bug #546934

	* addressbook/e-book-backend-exchange.c: The list of collected
	changes in ctx->changes was never returned to the caller. Instead
	the list was leaked when freeing the context. For deleted items,
	an empty vcard with the UID has to be returned. Instead
	find_deleted_ids() returned the UID. find_deleted_ids() is a
	callback for g_hash_table_foreach() and modified the hash that is
	iterated over. The effect is that the iteration was stopped
	prematurely, leading to incorrect change tracking.

2008-08-14  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #489236

	* mail/mail-stub-exchange.c: (get_folder_contents_online):
	Update high_article_num properly to see all messages in the folder.

2008-08-12  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #547308

	* addressbook/e-book-backend-gal.c: (gal_connect): Distinguish
	between GAL offline and unsupported authentication method used.
	* addressbook/e-book-backend-gal.c: (ldap_reconnect), (gal_reconnect),
	(build_contact_from_entry): Adapt to new function prototype from EDS.

2008-08-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #546933

	* calendar/e-cal-backend-exchange.c: (internal_get_timezone):
	Do not lookup for NULL.

2008-08-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #545877

	* configure.in:
	Bump eds_minimum_version to 2.23.90 for CamelDList.

	* camel/camel-exchange-journal.c:
	* camel/camel-exchange-journal.h:
	Use CamelDList instead of EDList.

2008-08-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #546397

	* camel/camel-exchange-folder.c: (class_init), (search_free):
	Remove 'search_free' and use the default function for this, to not
	free memory held by camel_pstring_....

2008-08-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #546257

	* addressbook/e-book-backend-exchange.c: (subscription_notify):
	Use proper ref/unref functions on EBookBackendExchange object.
